--- a/pagina-web.html
+++ b/pagina-web.html
@@ -2,27 +2,105 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Formulario de Información Personal</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Preguntas Divertidas</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        header {
+            background-color: #4682b4;
+            color: white;
+            padding: 20px;
+            width: 100%;
+            text-align: center;
+        }
+
+        h1 {
+            margin: 0;
+        }
+
+        section {
+            margin: 20px;
+            padding: 20px;
+            background-color: #ffffff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 90%;
+            max-width: 600px;
+        }
+
+        .question {
+            margin-bottom: 20px;
+        }
+
+        .question span {
+            font-weight: bold;
+        }
+
+        a {
+            color: #4682b4;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        footer {
+            margin-top: auto;
+            background-color: #4682b4;
+            color: white;
+            padding: 10px;
+            width: 100%;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Formulario de Información Personal</h1>
-    <form action="/submit" method="post">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required><br><br>
+    <header>
+        <h1>¡Cuéntanos sobre ti!</h1>
+    </header>
 
-        <label for="edad">Edad</label>
-        <input type="number" id="edad" name="edad" min="0" required><br><br>
+    <section>
+        <div class="question">
+            <span>¿Cuál es tu nombre?</span>
+            <p>Explora el origen de los nombres en <a href="https://es.wikipedia.org/wiki/Nombre" target="_blank">Wikipedia</a>.</p>
+        </div>
+        
+        <div class="question">
+            <span>¿Cuántos años tienes?</span>
+            <p>Aprende más sobre la <a href="https://es.wikipedia.org/wiki/Edad" target="_blank">edad</a> y su importancia.</p>
+        </div>
 
-        <label for="curso">Curso:</label>
-        <input type="text" id="curso" name="curso" required><br><br>
+        <div class="question">
+            <span>¿En qué curso estás?</span>
+            <p>Consulta sobre los sistemas educativos en <a href="https://es.wikipedia.org/wiki/Educaci%C3%B3n" target="_blank">Wikipedia</a>.</p>
+        </div>
 
-        <label for="color">Color favorito:</label>
-        <input type="text" id="color" name="color" required><br><br>
+        <div class="question">
+            <span>¿Cuál es tu color favorito?</span>
+            <p>Descubre la psicología del color en <a href="https://es.wikipedia.org/wiki/Color" target="_blank">Wikipedia</a>.</p>
+        </div>
 
-        <label for="comida">Comida favorita:</label>
-        <input type="text" id="comida" name="comida" required><br><br>
+        <div class="question">
+            <span>¿Cuál es tu comida favorita?</span>
+            <p>Encuentra más sobre platos típicos en <a href="https://es.wikipedia.org/wiki/Gastronom%C3%ADa" target="_blank">Wikipedia</a>.</p>
+        </div>
+    </section>
 
-        <input type="submit" value="Enviar">
-    </form>
+    <footer>
+        <p>Creado con &#9829; por un entusiasta del código.</p>
+    </footer>
 </body>
 </html>
+
