--- a/pagina-web.html
+++ b/pagina-web.html
@@ -47,13 +47,14 @@
             font-weight: bold;
         }
 
-        a {
-            color: #4682b4;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
+        .question input {
+            display: block;
+            margin-top: 10px;
+            padding: 8px;
+            width: calc(100% - 16px);
+            max-width: 560px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
 
         footer {
@@ -74,27 +75,27 @@
     <section>
         <div class="question">
             <span>¿Cuál es tu nombre?</span>
-            <p>Explora el origen de los nombres en <a href="https://es.wikipedia.org/wiki/Nombre" target="_blank">Wikipedia</a>.</p>
+            <input type="text" placeholder="Escribe tu nombre">
         </div>
         
         <div class="question">
             <span>¿Cuántos años tienes?</span>
-            <p>Aprende más sobre la <a href="https://es.wikipedia.org/wiki/Edad" target="_blank">edad</a> y su importancia.</p>
+            <input type="number" placeholder="Escribe tu edad">
         </div>
 
         <div class="question">
             <span>¿En qué curso estás?</span>
-            <p>Consulta sobre los sistemas educativos en <a href="https://es.wikipedia.org/wiki/Educaci%C3%B3n" target="_blank">Wikipedia</a>.</p>
+            <input type="text" placeholder="Escribe tu curso">
         </div>
 
         <div class="question">
             <span>¿Cuál es tu color favorito?</span>
-            <p>Descubre la psicología del color en <a href="https://es.wikipedia.org/wiki/Color" target="_blank">Wikipedia</a>.</p>
+            <input type="text" placeholder="Escribe tu color favorito">
         </div>
 
         <div class="question">
             <span>¿Cuál es tu comida favorita?</span>
-            <p>Encuentra más sobre platos típicos en <a href="https://es.wikipedia.org/wiki/Gastronom%C3%ADa" target="_blank">Wikipedia</a>.</p>
+            <input type="text" placeholder="Escribe tu comida favorita">
         </div>
     </section>
 
@@ -103,4 +104,5 @@
     </footer>
 </body>
 </html>
+
 
