--- a/primerapaginaweb.html
+++ b/primerapaginaweb.html
@@ -99,9 +99,11 @@
 
     <header>
         <h1>Mi Página Web Interactiva</h1>
-        <h3><a href="#">Ir a la Página Principal</a></h3>
-        <h3><a href="#">Ir a la Segunda Página (HTML y CSS)</a></h3>
-        <h3><a href="#">Ir a la Tercera Página (HTML, CSS y JavaScript)</a></h3>
+         <h2 id="demo2"> <a href="index.html">SI PULSAS AQUÍ VERÁS MI PRIMERA WEB</a></h2>
+    <h2 id="demo2"> <a href="dos.html">SI PULSAS AQUÍ VERÁS MI SEGUNDA WEB que usa HTML y CSS</a></h2>
+    <!--
+      Arriba están enlazadas mis otras dos páginas   
+     -->
     </header>
 
     <main>
