--- a/a.html
+++ b/a.html
@@ -33,15 +33,15 @@ var dia = prompt ("escribe un numero 0 al 6: ");
       break
     default:
       diaNombre = "Numero de dia incorrecto"
-
   }
-  
-      document.write (diaNombre);
 
-
+  document.write ("<br>");
+  document.write ("<h3id='demo1'>El dia de la semana correspondiente es: " +diaNombre);
+  document.write ("</h3>");
+  document.write ("<br><br><br>");
   
 </script>
- 
-</body>
+  
+</body> 
   
 </html>
