--- a/index.html
+++ b/index.html
@@ -1,63 +1,28 @@
-<!DOCTYPE html>
 <html>
     <head>
+        <title>Challenge: A picture-perfect trip</title>
         <meta charset="utf-8">
-        <title>Challenge: Apples and bananas classes</title>
-        <style>
-        .apples {
-              background-color:purple
-        }
-            .bananas{
-                background-color:green
-            }
-        </style>
-    
     </head>
+   <link rel="stylesheet" href="estilo.css">
     <body>
-
-    <h1><strong class="apples">Apples</strong> and <strong class="bananas">Bananas</strong></h1>
-    
-    <p>
-    I like to eat eat eat 
-        <strong class="apples">apples</strong> and
-        <strong class="bananas">bananas</strong>.<br>
-    I like to eat eat eat 
-        <strong class="apples">apples</strong> and
-        <strong class="bananas">bananas</strong>.<br>
-    I like to ate ate ate 
-        <strong class="apples">ay-ples</strong> and
-        <strong class="bananas">bay-nay-nays</strong>.<br>
-    I like to ate ate ate 
-        <strong class="apples">ay-ples</strong> and
-        <strong class="bananas">bay-nay-nays</strong>.<br>
-    I like to eet eet eet
-        <strong class="apples">ee-ples</strong> and
-        <strong class="bananas">bee-nee-nees</strong>.<br>
-    I like to eet eet eet
-        <strong class="apples">ee-ples</strong> and
-        <strong class="bananas">bee-nee-nees</strong>.<br>
-    I like to ite ite ite
-        <strong class="apples">i-ples</strong> and
-        <strong class="bananas">by-by-nys</strong>.<br>
-    I like to ite ite ite
-        <strong class="apples">i-ples</strong> and
-        <strong class="bananas">by-by-nys</strong>.<br>
-    I like to ote ote ote
-        <strong class="apples">oh-ples</strong> and
-        <strong class="bananas">bo-no-nos</strong>.<br>
-    I like to ote ote ote
-        <strong class="apples">oh-ples</strong> and
-        <strong class="bananas">bo-no-nos</strong>.<br>
-    I like to ute ute ute
-        <strong class="apples">uupples</strong> and
-        <strong class="bananas">bununus</strong>.<br>
-    I like to ute ute ute
-        <strong class="apples">uupples</strong> and
-        <strong class="bananas">bununus</strong>.<br>
-    I like to eat eat eat 
-        <strong class="apples">>apples</strong> and
-        <strong class="bananas">>bananas</strong>.<br>
-</p>
-
+        <h1>The perfect trip</h1>
+         <h2><a href="Paraiso.html">PULSA AQUI PARA VER el paraiso</a></h2>
+        <h2><a href="leviatan.html">PULSA AQUI PARA VER el leviatán</a></h2>
+        <h2><a href="infinity.html">PULSA AQUI PARA VER el infinito</a></h2>
+        <h2><a href="leyenda.html">PULSA AQUI PARA VER LA leyenda</a></h2>
+        <h2><a href="marmota.html">PULSA AQUI PARA VER LA marmota</a></h2>
+        <h2><a href="hyrule.html">PULSA AQUI PARA VER hyrule</a></h2>
+        <h2><a href="union.html">PULSA AQUI PARA VER LA union</a></h2>
+        <h2><a href="zero.html">PULSA AQUI PARA VER el zero</a></h2>
+        <h2><a href="dos.html">PULSA AQUI PARA VER a VEGETA777</a></h2>
+        <h2><a href="shueker.html">PULSA AQUI PARA VER el imperio</a></h2>
+        <p>I would see scenes like..."</p>
+       <p><img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/space/planet.png" alt="planeta verde" width="80"height="50"></p>
+        <p>And animals like...</p>
+        <p><img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/avatars/starky-sapling.png" alt="demonio angel"width="80" height="50"></p>
+        <p>And eat food like...</p>
+         <p><img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/avatars/spunky-sam-red.png" alt="tomate"width="80"height="50"></p>
+<img src="primo.png">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d51087.44858272646!2d-2.470257240380851!3d36.84330142684188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2ses!4v1730290284961!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </body>
 </html>
