--- a/index.html
+++ b/index.html
@@ -6,16 +6,29 @@
    <link rel="stylesheet" href="estilo.css">
     <body>
         <h1>The perfect trip</h1>
-         <h2><a href="Paraiso.html">PULSA AQUI PARA VER el paraiso</a></h2>
-        <h2><a href="leviatan.html">PULSA AQUI PARA VER el leviatán</a></h2>
-        <h2><a href="infinity.html">PULSA AQUI PARA VER el infinito</a></h2>
-        <h2><a href="leyenda.html">PULSA AQUI PARA VER LA leyenda</a></h2>
-        <h2><a href="marmota.html">PULSA AQUI PARA VER LA marmota</a></h2>
-        <h2><a href="hyrule.html">PULSA AQUI PARA VER hyrule</a></h2>
-        <h2><a href="union.html">PULSA AQUI PARA VER LA union</a></h2>
-        <h2><a href="zero.html">PULSA AQUI PARA VER el zero</a></h2>
-        <h2><a href="dos.html">PULSA AQUI PARA VER a VEGETA777</a></h2>
-        <h2><a href="shueker.html">PULSA AQUI PARA VER el imperio</a></h2>
+         <h2><a href="2.html">PULSA AQUI PARA VER 2</a></h2>
+        <h2><a href="5.html">PULSA AQUI PARA VER 5</a></h2>
+        <h2><a href="6.html">PULSA AQUI PARA VER 6</a></h2>
+        <h2><a href="a.html">PULSA AQUI PARA VER a</a></h2>
+        <h2><a href="comprobarSiEsPrimo.js">PULSA AQUI PARA VER comprobarSiEsPrimo</a></h2>
+        <h2><a href="estilo.css">PULSA AQUI PARA VER estilo</a></h2>
+        <h2><a href="factorial.html">PULSA AQUI PARA VER factorial</a></h2>
+         <h2><a href="factorial2.html">PULSA AQUI PARA VER factorial2</a></h2>
+         <h2><a href="factorial3.html">PULSA AQUI PARA VER factorial3</a></h2>
+        <h2><a href="fibonacci.html">PULSA AQUI PARA VER fibonacci</a></h2>
+        <h2><a href="fibonacci2.html">PULSA AQUI PARA VER fibonacci2</a></h2>
+        <h2><a href="fibonacci3.html">PULSA AQUI PARA VER fibonacci3</a></h2>
+        <h2><a href="octava.html">PULSA AQUI PARA VER octava</a></h2>
+        <h2><a href="octava2.html">PULSA AQUI PARA VER octava2</a></h2>
+        <h2><a href="octava3.html">PULSA AQUI PARA VER octava3</a></h2>
+        <h2><a href="pedirNumero.js">PULSA AQUI PARA VER pedirNumero</a></h2>
+        <h2><a href="primerapaginaweb.html">PULSA AQUI PARA VER primerapaginaweb</a></h2>
+        <h2><a href="primo.html">PULSA AQUI PARA VER primo</a></h2>
+        <h2><a href="primo2.html">PULSA AQUI PARA VER primo2</a></h2>
+        <h2><a href="script-leer-numeros.js">PULSA AQUI PARA VER script-leer-numeros</a></h2>
+         <h2><a href="septima.html">PULSA AQUI PARA VER septima</a></h2>
+         <h2><a href="septima2.html">PULSA AQUI PARA VER septima2</a></h2>
+         <h2><a href="septima3.html">PULSA AQUI PARA VER septima3</a></h2>
         <p>I would see scenes like..."</p>
        <p><img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/space/planet.png" alt="planeta verde" width="80"height="50"></p>
         <p>And animals like...</p>
