--- a/primo.html
+++ b/primo.html
@@ -7,7 +7,7 @@
     <script src="pedirNumero.js"> </script>
     <script>
       var numero;
-      numero = pedirNumeroEnRango (2,555);
+      numero = pedirNumero (2,555);
       document.write ("<h1> Mi página web para calcular si " +numero+ " es un numero primo </h1>");
       var esPrimo;
       esPrimo = comprobarEsPrimo (numero);
