--- a/par.html
+++ b/par.html
@@ -3,8 +3,8 @@
     <title>pagina para comprobar tu destino</title>   
   </head>
   <body>
-      <script src="trono.js"></script>
-    <script src="arcangel.js"> </script>
+      <script src="comprobarSiEsPar.js"></script>
+    <script src="pedirNumero.js"> </script>
     <script>
       var numero
   numero = PedirNumero (2,777);
