--- a/par.html
+++ b/par.html
@@ -7,7 +7,7 @@
     <script src="ComprobarSiEsPar.js"> </script>
     <script>
       var numero
-  numero = PedirNumero (2,777);
+  numero = pedirNumero (2,777);
     document.write("<h1> mi pagina web para calcular si " +numero+ " es un numero primo </h1>");
       var primo;
       primo = ComprobarSiEsPar(numero);
