--- a/par.html
+++ b/par.html
@@ -6,7 +6,7 @@
       <script src="pedirNumero.js"></script>
     <script src="ComprobarSiEsPar.js"> </script>
     <script>
-      var numero
+      var numero;
   numero = pedirNumero (2,777);
     document.write("<h1> mi pagina web para calcular si " +numero+ " es un numero primo </h1>");
       var primo;
