--- a/par.html
+++ b/par.html
@@ -4,7 +4,7 @@
   </head>
   <body>
       <script src="pedirNumero.js"></script>
-    <script src="ComprobarSiEsPar.js"> </script>
+    <script src="comprobarSiEsPar.js"> </script>
     <script>
       var numero;
   numero = pedirNumero (2,777);
