--- a/par.html
+++ b/par.html
@@ -13,11 +13,11 @@
       primo = comprobarSiEsPar(numero);
       if ( primo == true )
       {
-        document.write (numero + " es un numero primo.");
+        document.write (numero + " es un numero par.");
       }
       else
       {
-        document.write(numero + " no es un numero primo.");
+        document.write(numero + " es un numero impar.");
       }
     </script>
     
