--- a/par.html
+++ b/par.html
@@ -8,7 +8,7 @@
     <script>
       var numero;
   numero = pedirNumero (2,777);
-    document.write("<h1> mi pagina web para calcular si " +numero+ " es un numero primo </h1>");
+    document.write("<h1> mi pagina web para calcular si " +numero+ " es un numero par </h1>");
       var primo;
       primo = comprobarSiEsPar(numero);
       if ( primo == true )
