--- a/par.html
+++ b/par.html
@@ -10,7 +10,7 @@
   numero = pedirNumero (2,777);
     document.write("<h1> mi pagina web para calcular si " +numero+ " es un numero par </h1>");
       var primo;
-      primo = comprobarSiEsPar(numero);
+      par = comprobarSiEsPar(numero);
       if ( primo == true )
       {
         document.write (numero + " es un numero par.");
