--- a/par.html
+++ b/par.html
@@ -9,9 +9,9 @@
       var numero;
   numero = pedirNumero (2,777);
     document.write("<h1> mi pagina web para calcular si " +numero+ " es un numero par </h1>");
-      var primo;
+      var par;
       par = comprobarSiEsPar(numero);
-      if ( primo == true )
+      if ( par == true )
       {
         document.write (numero + " es un numero par.");
       }
