--- a/primo2.html
+++ b/primo2.html
@@ -21,6 +21,9 @@
                 if (esPrimo == true) {
                           document.write (i + " Es un número primo.<br>");
                         } 
+                    else
+                { 
+                    document.write (i + " NO es un numero primo.<br>");
                  } 
           </script>
 </body>
