--- a/primo2.html
+++ b/primo2.html
@@ -12,7 +12,7 @@
             var esPrimo;
             var numero;
             var i;
-            numero = pedirNumeroEnRango(2, 1000);
+            numero = pedirNumero(2, 1000);
             document.write ("<h1> Mi Página para calcular todos los numeros primos inferiores a " +numero+ "</h1>");
             document.write("<h4>Los numeros primos entre 2 y " +numero+ "  son: </h4>");
             for (i = 2; i <= numero ; i= i + 1)
