--- a/primo2.html
+++ b/primo2.html
@@ -1,4 +1,4 @@
-<html>
+“<! DOCTYPE html>”
     <head>
         <title>Mi Página para calcular todos los numeros primos inferiores a una cifra </title> 
         <link rel="stylesheet" href="estilo.css">
