--- a/pares.html
+++ b/pares.html
@@ -14,7 +14,7 @@
             var i;
             numero = pedirNumero(2, 1000);
             document.write ("<h1> Mi Página para calcular todos los numeros primos inferiores a " +numero+ "</h1>");
-            document.write("<h4>Los numeros primos entre 2 y " +numero+ "  son: </h4>");
+            document.write("<h4>Los numeros pares entre 2 y " +numero+ "  son: </h4>");
             for (i = 2; i <= numero ; i= i + 1)
                 {
                 esPar = comprobarEsPar(i);
