--- a/pares.html
+++ b/pares.html
@@ -17,7 +17,7 @@
             document.write("<h4>Los numeros pares entre 2 y " +numero+ "  son: </h4>");
             for (i = 2; i <= numero ; i= i + 1)
                 {
-                esPar = comprobarEsPar(i);
+                esPar = comprobarSiEsPar(i);
                 if (esPar == true) {
                           document.write (i + " Es un número par.<br>");
                         } 
