--- a/array.html
+++ b/array.html
@@ -4,6 +4,12 @@
    </head>
       <body>
        <script scr="pedirNumero.js"> </script>
-  
+       <script>
+      var numeros = [];
+       var i;
+      var favoritos;
+
+        favoirtos = perdirNumero  
+       </script>
      </body> 
 </html>
