--- a/array.html
+++ b/array.html
@@ -8,8 +8,15 @@
       var numeros = [];
        var i;
       var favoritos;
+      var numero;
 
-        favoirtos = perdirNumero  
+        favoirtos = pedirNumero (2,5);
+          for(i=1; i <= fovoritos; i = i+1 )
+             {
+                numero = pedirNumero (10,100);
+                numeros.push (numero);
+             }
+          document.write ("los numeros favoritos introducidos han sido: ", numeros);
        </script>
      </body> 
 </html>
