--- a/array.html
+++ b/array.html
@@ -10,7 +10,7 @@
       var favoritos;
       var numero;
 
-        favoirtos = pedirNumero (2,5);
+        favoritos = pedirNumero (2,5);
           for(i=1; i <= fovoritos; i = i+1 )
              {
                 numero = pedirNumero (10,100);
