--- a/array.html
+++ b/array.html
@@ -11,7 +11,7 @@
       var numero;
 
         favoritos = pedirNumero (2,5);
-          for(i=1; i <= fovoritos; i = i+1 )
+          for(i=1; i <= favoritos; i = i+1 )
              {
                 numero = pedirNumero (10,100);
                 numeros.push (numero);
