--- a/array.html
+++ b/array.html
@@ -1,22 +1,22 @@
 <html>
-   <head>
-     <title> Web sobre arrays</title>  
-   </head>
-      <body>
-       <script scr="pedirNumero.js"> </script>
-       <script>
-      var numeros = [];
-       var i;
-      var favoritos;
-      var numero;
+  <head>
+    <title> Web sobre arrays</title>
+  </head>
+  <body>
+  <script src="pedirNumero.js"> </script>
+    <script>
+    var numeros = [];
+    var i;
+    var favoritos;
+    var numero;
 
-        favoritos = pedirNumero ("Dime: cuantos numero favoritos tienes entre ",2,5);
-          for(i=1; i <= favoritos; i = i+1 )
-             {
-                numero = pedirNumeroMejorado ("Escribe ahora tus numeros favoritos entre", 10,100);
-                numeros.push (numero);
-             }
-          document.write ("los numeros favoritos introducidos han sido: ", numeros);
-       </script>
-     </body> 
+    favoritos = pedirNumeroMejorado ("Dime: ¿Cuantos numeros favoritos tienes? entre ",2,5);
+    for (i=1; i <= favoritos; i = i+1 )
+      {
+          numero = pedirNumeroMejorado ("Escribe ahora tus numeros favoritos entre", 10,100);
+          numeros.push (numero);
+      }
+     document.write ("Los numeros favoritos introducidos han sido: ", numeros);      
+    </script> 
+  </body>
 </html>
