--- a/amigos.html
+++ b/amigos.html
@@ -8,7 +8,7 @@
     var amigos = [];
     var i;
     var favoritos;
-    var amigos;
+    var amigo;
 
     favoritos = pedirNumeroMejorado ("Dime: ¿Cuantos amigos tienes? entre ",2,5);
     for (i=1; i <= favoritos; i = i+1 )
