--- a/amigos.html
+++ b/amigos.html
@@ -13,7 +13,7 @@
     favoritos = pedirNumeroMejorado ("Dime: ¿Cuantos amigos tienes? entre ",2,5);
     for (i=1; i <= favoritos; i = i+1 )
       {
-         amigo = pedirNumeroMejorado ("Escribe ahora amigos entre", 10,100);
+         amigo = prompt ("Escribe el nombre de tus amigos");
           amigos.push (numero);
       }
      document.write ("Los numeros favoritos introducidos han sido: ", amigos);      
