--- a/amigos.html
+++ b/amigos.html
@@ -14,7 +14,7 @@
     for (i=1; i <= favoritos; i = i+1 )
       {
          amigo = prompt ("Escribe el nombre de tus amigos");
-          amigos.push (numero);
+          amigos.push (amigo);
       }
      document.write ("Los numeros favoritos introducidos han sido: ", amigos);      
     </script> 
