--- a/amigos.html
+++ b/amigos.html
@@ -16,7 +16,7 @@
          amigo = prompt ("Escribe el nombre de tus amigos");
           amigos.push (amigo);
       }
-     document.write ("Los numeros favoritos introducidos han sido: ", amigos);      
+     document.write ("Tus amigos son: ", amigos);      
     </script> 
   </body>
 </html>
