--- a/amigos.html
+++ b/amigos.html
@@ -16,7 +16,8 @@
          amigo = prompt ("Escribe el nombre de tus amigos");
           amigos.push (amigo);
       }
-     document.write ("Tus amigos son: ", amigos);      
+        document.write ("<h3>tus amigos son:<br> </h3>"); 
+       document.write("<span style='color: #0096CC; font-size: 50px; margin: 0 10px; font-weight: bold;'>" + numeros + "</span>");
     </script> 
   </body>
 </html>
