--- a/amigos.html
+++ b/amigos.html
@@ -17,7 +17,7 @@
           amigos.push (amigo);
       }
         document.write ("<h3>tus amigos son:<br> </h3>"); 
-       document.write("<span style='color: #0096CC; font-size: 50px; margin: 0 10px; font-weight: bold;'>" + numeros + "</span>");
+       document.write("<span style='color: #0096CC; font-size: 50px; margin: 0 10px; font-weight: bold;'>" + amigos + "</span>");
     </script> 
   </body>
 </html>
