--- a/amigos.html
+++ b/amigos.html
@@ -2,6 +2,7 @@
   <head>
     <title> Web sobre arrays</title>
   </head>
+ <link rel="stylesheet" href="estilo.css">  
   <body>
   <script src="pedirNumero.js"> </script>
     <script>
