--- a/interactiva.html
+++ b/interactiva.html
@@ -8,6 +8,8 @@
     <button id="botonInofensivo"> Botón inofensivo</button>
     <script>
       alert ("HOLA MUNDO");
+        document.getElementById('botonInofensivo').addEventListener('click', function () { document.write("Botón inofensivo clickeado"); });
+       
     </script>
   </body>
 </html>
