--- a/fibonacci3.html
+++ b/fibonacci3.html
@@ -6,9 +6,9 @@
     <body>    
    
         <h1> Mi  WEB acerca de los numeros de fibonacci - tercera parte</h1>
-        <script src="pedirNumeroEnRango.js"></script>
+        <script src="pedirNumero.js"></script>
         <script>
-            var numero = pedirNumeroEnRango(1, 50);
+            var numero = pedirNumero(1, 50);
             // a y b se inicializan con los dos primeros números de la secuencia (0 y 1).
             // temp se utiliza como una variable temporal para almacenar el siguiente número de la secuencia.
             var a = 1;
