--- a/octava3.html
+++ b/octava3.html
@@ -6,9 +6,9 @@
     <body>    
    
         <h1> Mi octava WEB acerca de sumar x numeros - tercera parte</h1>
-        <script src="pedirNumeroEnRango.js"></script>
+        <script src="pedirNumero.js"></script>
         <script>
-        var numero = pedirNumeroEnRango(1, 100);                 
+        var numero = pedirNumero(1, 100);                 
             //Iniciamos las variables
             var suma = 0; 
             var i = 1;
