--- a/septima3.html
+++ b/septima3.html
@@ -7,9 +7,9 @@
     <body>    
    
         <h1> Mi septima WEB acerca de TABLA DE MULTIPLICAR- tercera parte</h1>
-        <script src="pedirNumeroEnRango.js"></script>
+        <script src="pedirNumero.js"></script>
         <script>
-        var numero = pedirNumeroEnRango(1, 10);
+        var numero = pedirNumero(1, 10);
         document.write ("Vamos a aprender  la tabla de MULTIPLICAR del: ");
         document.write (numero);
                           
