--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
          <h2><a href="septima2.html">PULSA AQUI PARA VER septima2</a></h2>
          <h2><a href="septima3.html">PULSA AQUI PARA VER septima3</a></h2>
         <h2><a href="par.html">PULSA AQUI PARA VER Par</a></h2>
-         <h2><a href="pares.html">PULSA AQUI PARA VER Par</a></h2>
-         <h2><a href="array.html">PULSA AQUI PARA VER Par</a></h2>
-         <h2><a href="amigos.html">PULSA AQUI PARA VER Par</a></h2>
-         <h2><a href="interactiva.html">PULSA AQUI PARA VER Par</a></h2>
+         <h2><a href="pares.html">PULSA AQUI PARA VER pares</a></h2>
+         <h2><a href="array.html">PULSA AQUI PARA VER array</a></h2>
+         <h2><a href="amigos.html">PULSA AQUI PARA VER amigos</a></h2>
+         <h2><a href="interactiva.html">PULSA AQUI PARA VER interactiva</a></h2>
         <p>I would see scenes like..."</p>
        <p><img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/space/planet.png" alt="planeta verde" width="80"height="50"></p>
         <p>And animals like...</p>
