--- a/botones2.html
+++ b/botones2.html
@@ -32,7 +32,7 @@
         // Definición de la función mostrarAlerta
         function mostrarAlerta() {
             // Mostrar un cuadro de alerta con el mensaje especificado
-            alert('¡Has pulsado el botón!!!');
+            alert('¡¡¡Porque me has pulsado!!!');
         }
     </script>
 </body>
