--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
          <h2><a href="array.html">PULSA AQUI PARA VER array</a></h2>
          <h2><a href="amigos.html">PULSA AQUI PARA VER amigos</a></h2>
          <h2><a href="interactiva.html">PULSA AQUI PARA VER interactiva</a></h2>
+         <h2><a href="botones2.html">PULSA AQUI PARA VER botones2</a></h2>
         <p>I would see scenes like..."</p>
        <p><img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/space/planet.png" alt="planeta verde" width="80"height="50"></p>
         <p>And animals like...</p>
