--- a/botones2.html
+++ b/botones2.html
@@ -9,6 +9,10 @@
     <div id="contenedor">
         <button id="botonInofensivo">Botón inofensivo</button>
         <button id="botonPulsame">Púlsame!!!!</button>
+         <input type="text"><br>
+        <input type="text" id="entrada1"><br>
+        <input type="number" id="entrada2" placeholder="tercer número" ><br>
+        <input type="number" id="entrada3" value ="666"><br>
         <div id="mensaje"></div>
     </div>
 
