--- a/calculadora2.html
+++ b/calculadora2.html
@@ -37,7 +37,7 @@
     <h2>Calculadora Normal 2</h2> 
     <input type="number" id="entrada1" placeholder="Primer número" value="13"><br>  
     <input type="number" id="entrada2" placeholder="Segundo número" value ="666"><br>  
-    <imput type="number" id="entrada3" placeholder="tercer número" value ="500"><br>
+    <input type="number" id="entrada3" placeholder="tercer número" value ="500"><br>
     
     <button id="buttonSumar">Sumar</button>
     <button id="buttonRestar">REstar</button>
