--- a/calculadora2.html
+++ b/calculadora2.html
@@ -40,7 +40,7 @@
     <input type="number" id="entrada3" placeholder="tercer número" value ="500"><br>
     
     <button id="buttonSumar">Sumar</button>
-    <button id="buttonRestar">REstar</button>
+    <button id="buttonRestar">Restar</button>
     <button id="buttonMultiplicar">Multiplicar</button>
     <button id="buttonDividir">Dividir</button>
       
