--- a/botones3primo.html
+++ b/botones3primo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>¡Salúdame!</title>
+    <title>Primo mejorado</title>
     <style>
         /* Estilos generales para el cuerpo de la página */
         body {
@@ -63,13 +63,13 @@
 <body>
     <!-- Contenedor principal -->
     <div class="contenedor">
-        <h1>¿Cómo te llamas?</h1>
+        <h1>Introduce tu número favorito</h1>
 
-        <!-- Campo de entrada para el nombre del usuario -->
-        <input type="text" id="entradaNombre" placeholder="Teclea tú nombre aquí"><br>
+        <!-- Campo de entrada para el numero favorito del usuario -->
+        <input type="number" id="entradaNumber" placeholder="introduce tu numero favorito"><br>
 
-        <!-- Botón para generar el saludo -->
-        <button id="botonSaludar">Saludar</button>
+        <!-- Botón para calcular si es primo -->
+        <button id="botonCalcular">¿Es primo?</button>
 
         <!-- Área donde se mostrará el mensaje -->
         <div id="mensaje"></div>
