--- a/botones3primo.html
+++ b/botones3primo.html
@@ -62,7 +62,7 @@
 
 <body>
     <!-- Contenedor principal -->
-    <div class="contenedor">
+  
         <h1>Introduce tu número favorito</h1>
 
         <!-- Campo de entrada para el numero favorito del usuario -->
@@ -73,7 +73,8 @@
 
         <!-- Área donde se mostrará el mensaje -->
         <div id="mensaje"></div>
-    </div>
+   
+    <script src="comprobarSiEsPrimo.js"></script>
     <script>
         // Declaramos las variables que usaremos globalmente
         var nombre, mensajeDiv;
