--- a/botones3primo.html
+++ b/botones3primo.html
@@ -77,13 +77,13 @@
     <script src="comprobarSiEsPrimo.js"></script>
     <script>
         // Declaramos las variables que usaremos globalmente
-        var nombre, mensajeDiv;
+        var numero, mensajeDiv;
 
         // Esperamos a que se haga clic en el botón
-        document.getElementById('botonSaludar').addEventListener('click', function() {
+        document.getElementById('botonCalcular').addEventListener('click', function() {
 
             // Obtenemos el valor del input (lo que el usuario ha escrito)
-            nombre = document.getElementById('entradaNombre').value;
+            numero = document.getElementById('entradaNumber').value;
             // Referencia al elemento donde mostraremos el mensaje
             mensajeDiv = document.getElementById('mensaje');
 
