--- a/botones3primo.html
+++ b/botones3primo.html
@@ -89,8 +89,8 @@
             mensajeDiv = document.getElementById('mensaje');
 
             // Si el usuario escribió algo, saludamos
-            if (nombre) {
-                mensajeDiv.textContent = ("¡Hola, " + nombre + "! ¡Bienvenido a clase! 👋");
+            if (numero) {
+                mensajeDiv.textContent = ("¡Hola, " + numero + "! ¡Bienvenido a clase! 👋");
             } 
             // Si el campo está vacío, le pedimos que escriba su nombre
             else {
