--- a/botones3primo.html
+++ b/botones3primo.html
@@ -91,11 +91,11 @@
            esPrimo = comprobarEsPrimo(numero);
             // Si el usuario escribió algo, saludamos
             if (esPrimo) {
-                mensajeDiv.textContent = ("¡Hola, " + numero + "! ¡Bienvenido a clase! 👋");
+                mensajeDiv.textContent = (" EL " + numero + " ES PRIMO ");
             } 
             // Si el campo está vacío, le pedimos que escriba su nombre
             else {
-                mensajeDiv.textContent = ("¡Dime tú nombre para saludarte 😊!!");
+                mensajeDiv.textContent = (" EL " + numero + " NO ES PRIMO ");
             }
         });
     </script>
