--- a/botones3factorial.html
+++ b/botones3factorial.html
@@ -75,7 +75,7 @@
         <div id="mensaje"></div>
         </div>
    
-    <script src="script-leer-numeros.js"></script>
+    <script src="factorial2.js"></script>
     <script>
         // Declaramos las variables que usaremos globalmente
         var numero, mensajeDiv;
