--- a/botones3factorial.html
+++ b/botones3factorial.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Primo mejorado</title>
+    <title>COmprobar factorial</title>
     <style>
         /* Estilos generales para el cuerpo de la página */
         body {
