--- a/botones3factorial.html
+++ b/botones3factorial.html
@@ -1,58 +1,58 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>COmprobar factorial</title>
+    <title>Comprobar factorial-Xinle</title>
     <style>
 
         body {
-            font-family: Arial, sans-serif;   /* Tipo de letra amigable y legible */
-            max-width: 300px;                 /* Limita el ancho del contenido */
-            margin: 0 auto;                   /* Centra el contenido horizontalmente */
-            padding: 20px;                    /* Espacio interno alrededor del contenido */
-            text-align: center;               /* Centra todo el texto */
-            background-color: lightblue;      /* Color de fondo agradable */
+            font-family: Arial, sans-serif; 
+            max-width: 300px;                
+            margin: 0 auto;                 
+            padding: 20px;                   
+            text-align: center;              
+            background-color: lightblue;     
         }
 
         input {
-            padding: 10px;                    /* Espacio interno en el input */
-            margin-bottom: 10px;              /* Separación debajo del input */
-            width: 200px;                     /* Ancho fijo del input */
+            padding: 10px;                   
+            margin-bottom: 10px;             
+            width: 200px;                   
         }
 
 
         button {
-            padding: 8px 15px;                /* Espaciado interno del botón */
-            margin: 5px;                      /* Separación alrededor del botón */
-            cursor: pointer;                  /* Cambia el cursor al pasar por encima */
-            background-color: #4CAF50;        /* Fondo verde para el botón */
-            color: white;                     /* Texto blanco */
-            border: none;                     /* Sin borde exterior */
-            border-radius: 4px;               /* Esquinas redondeadas */
+            padding: 8px 15px;               
+            margin: 5px;                      
+            cursor: pointer;                 
+            background-color: #4CAF50;       
+            color: white;                   
+            border: none;                  
+            border-radius: 4px;               
         }
 
         button:hover {
-            background-color: #45a049;        /* Color un poco más oscuro al pasar el ratón */
+            background-color: #45a049;      
         }
 
         .contenedor {
-            background-color: white;          /* Fondo blanco para destacar */
-            padding: 30px 40px;               /* Espacio interno del contenedor */
-            border-radius: 15px;              /* Esquinas redondeadas del cuadro */
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1); /* Sombra para efecto de elevación */
-            text-align: center;               /* Centrado del contenido */
+            background-color: white;         
+            padding: 30px 40px;             
+            border-radius: 15px;              
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1); 
+            text-align: center;              
         }
 
 
         h1 {
-            margin-bottom: 20px;              /* Espacio debajo del título */
-            color: #333;                      /* Color gris oscuro para buena lectura */
+            margin-bottom: 20px;             
+            color: #333;                      
         }
 
 
         #mensaje {
-            margin-top: 20px;                 /* Espacio encima del mensaje */
-            font-size: 18px;                  /* Tamaño del texto del mensaje */
-            color: #444;                      /* Color gris intermedio */
+            margin-top: 20px;                 
+            font-size: 18px;                 
+            color: #444;                    
         }
     </style>
 </head>
