--- a/persona-objeto.html
+++ b/persona-objeto.html
@@ -12,12 +12,15 @@
           edad: 16,
           ciudad: "Almeria",
           pais: "España",
+       saludar (){
+         console.log ("HOLA A TODOS")
+       }
         };
       console.log(persona.nombre);
       console.log(persona.apellidos);
       console.log(persona.edad);
-      console.log(persona.ciudad)
-      console.log(persona.pais)
+      console.log(persona.ciudad);
+      console.log(persona.pais);
     </script>
   </body>
 </html>
