--- a/persona-objeto.html
+++ b/persona-objeto.html
@@ -3,6 +3,11 @@
     <title> Página con ejemplos en JAVASCRIPT</title>
   </head>
   <body>
+     <h2>MI PRIMER OBJETO:</h2>
+     <button onclick= "persona.saludar()"> SALUDAR </button>
+    <div id="resultado-persona"> AQUI APARECEN COSITAS</div>
+
+    
     <script>
       // EJEMPLO DE UN OBJETO TIPO PERSONA
       const persona =
