--- a/persona-objeto.html
+++ b/persona-objeto.html
@@ -19,7 +19,7 @@
           pais: "España",
        saludar (){
 const output = document.getelementById('resultadpo-persona')
-         output.innerHTML = "HOLA ${this.nombre} TENGO ${this.edad}";
+         output.innerHTML = HOLA MI NOMBRE ES ${this.nombre} Y TENGO ${this.edad} AÑOS;
         }
         };
       console.log(persona.nombre);
