--- a/segundapractica.html
+++ b/segundapractica.html
@@ -1,6 +1,7 @@
 <html>
   <title>Xinle Wang</title>
     <h1>Segunda práctica de Xinle Wang</h1>
-  <p></p>
-  
+  <B>"Este es un párrafo en negrita"</B>
+  <l>"este es un párrafo en cursiva"</l>
+  <B><l>"este es un párrafo en negrita y en cursiva"</l></B>
 </html>
