--- a/segundapractica.html
+++ b/segundapractica.html
@@ -2,6 +2,6 @@
   <title>Xinle Wang</title>
     <h1>Segunda práctica de Xinle Wang</h1>
   <B>"Este es un párrafo en negrita"</B>
-  <l>"este es un párrafo en cursiva"</l>
-  <B><l>"este es un párrafo en negrita y en cursiva"</l></B>
+  <i>"este es un párrafo en cursiva"</i>
+  <B><i>"este es un párrafo en negrita y en cursiva"</i></B>
 </html>
