Fix HTML tags for italic and bold text

--- a/segundapractica.html
+++ b/segundapractica.html
@@ -2,6 +2,6 @@
   <title>Xinle Wang</title>
     <h1>Segunda práctica de Xinle Wang</h1>
   <B>"Este es un párrafo en negrita"</B>
-  <i>"este es un párrafo en cursiva"</i>
-  <B><i>"este es un párrafo en negrita y en cursiva"</i></B>
+  <I>"este es un párrafo en cursiva"</I>
+  <B><I>"este es un párrafo en negrita y en cursiva"</I></B>
 </html>
