--- a/segundapractica.html
+++ b/segundapractica.html
@@ -1,7 +1,11 @@
 <html>
+  <head>
   <title>Xinle Wang</title>
+  </head>
+     <body>
     <h1>Segunda práctica de Xinle Wang</h1>
   <B>"Este es un párrafo en negrita"</B>
   <I>"este es un párrafo en cursiva"</I>
   <B><I>"este es un párrafo en negrita y en cursiva"</I></B>
+     </body>
 </html>
