--- a/segundapractica.html
+++ b/segundapractica.html
@@ -4,8 +4,8 @@
   </head>
      <body>
     <h1>Segunda práctica de Xinle Wang</h1>
-  <B>"Este es un párrafo en negrita"</B>
-  <I>"este es un párrafo en cursiva"</I>
+  <B>"Este es un párrafo en negrita"</B><P>
+  <I>"este es un párrafo en cursiva"</I><P>
   <B><I>"este es un párrafo en negrita y en cursiva"</I></B>
      </body>
 </html>
