--- a/ns.html
+++ b/ns.html
@@ -15,7 +15,7 @@
           <br>·2 l&aacute;minas de oblea</br>
         </font></left-size></FONT></p>
       <p></p>
-      <p><FONT COLOR="#000000"><FONT FACE="arial"><font size="5"><style="text-aling: justify>
+      <p><FONT COLOR="#000000"><FONT FACE="arial"><font size="5"><style="text-aling: justify;">
         <p>Seguiremos estos pasos para elaborar el turr&oacute;n:</p>
         <br>1.En primer lugar ponemos a calentar la miel en un cazo. Lo haremos a fuego lento hasta que quede líquida y se haya evaporado el agua que pueda contener.</br>
         <br>2.Seguidamente añadiremos el azúcar en la mezcla. Seguiremos agitando con una espátula o cuchara de madera de manera continuada. Cuando hayamos conseguido una mezcla homogénea con una textura similar al caramelo podemos apartarla.</br>
