--- a/ns.html
+++ b/ns.html
@@ -15,7 +15,7 @@
           <br>·2 l&aacute;minas de oblea</br>
         </font></left-size></FONT></p>
       <p></p>
-      <p><FONT COLOR="#000000"><FONT FACE="arial"><font size="5"><style="text-aling: justify;">
+      <p style="text-aling: justify;" font size="5"><FONT COLOR="#000000"><FONT FACE="arial">
         <p>Seguiremos estos pasos para elaborar el turr&oacute;n:</p>
         <br>1.En primer lugar ponemos a calentar la miel en un cazo. Lo haremos a fuego lento hasta que quede líquida y se haya evaporado el agua que pueda contener.</br>
         <br>2.Seguidamente añadiremos el azúcar en la mezcla. Seguiremos agitando con una espátula o cuchara de madera de manera continuada. Cuando hayamos conseguido una mezcla homogénea con una textura similar al caramelo podemos apartarla.</br>
@@ -25,7 +25,7 @@
         <br>6.Cuando ya tengamos la mezcla bien batida, la vertemos en un molde al que previamente le hayamos puesto una lámina de oblea en el fondo. El molde puede ser de plástico, o de hojalata y lo deberemos forrar con papel de hornear. Extendemos la mezcla de almendra, miel, azúcar y clara de huevo con la ayuda de nuestras manos y si ya ha empezado a enfriarse con un rodillo.</br>
         <br>7.Elegiremos el grosor de nuestra tableta dependiendo de la facilidad con la queramos partirlo luego, cuando ya esté todo bien extendido añadiremos otra lámina de oblea recortada en la parte superior. Finalmente, lo dejaremos reposar bien en nuestro molde.</br>
         <br>8.Lo sacaremos cuando ya este frío y lo podemos recortar con mucho cuidado para que la forma quede perfecta.</br>
-       </style></font></FONT></FONT></p>
+       </font></FONT></p>
       <a href mail="correo@correo.com">correo@correo.es</a>
       
   </body>
